Added code to check status result from server, etc

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -12,18 +12,19 @@
      "output_type": "stream",
      "text": [
       "Trying to log in\n",
+      "{\"id\":54280,\"forename\":\"Michael\",\"surname\":\"Smith\",\"username\":\"lionfish_pynbn\",\"email\":\"m.t.smith@sheffield.ac.uk\",\"phone\":\"07958461290\",\"registrationDate\":1456420914433,\"allowEmailAlerts\":false,\"subscribedToAdminMails\":false,\"subscribedToNBNMarketting\":false,\"active\":false}\n",
       "Connected\n"
      ]
     }
    ],
    "source": [
     "import pynbn\n",
-    "c = pynbn.connect('lionfish_pynbn','')\n"
+    "c = pynbn.connect('lionfish_pynbn','password')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -42,12 +43,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "383"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(obs)"
+   ]
   },
   {
    "cell_type": "code",
@@ -115,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -124,28 +138,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://data.nbn.org.uk/api/search/taxa?q=/Volucella bombylans\n",
-      "['NBNSYS0000007094', 'NBNSYS0000172195', 'NBNSYS0000041862', 'NBNSYS0000030238', 'NBNSYS0100022836', 'NBNSYS0100026711', 'NBNSYS0100022843', 'NBNSYS0000007095', 'NBNSYS0100022840', 'NBNSYS0000159014', 'NBNSYS0000007098', 'NBNSYS0100005981', 'NBNSYS0000007096', 'NBNSYS0000007097', 'NBNSYS0000159015', 'NBNSYS0100022837', 'NBNSYS0100022322']\n",
-      "https://data.nbn.org.uk/api/taxonObservations?ptvk=NBNSYS0000007094&ptvk=NBNSYS0000172195&ptvk=NBNSYS0000041862&ptvk=NBNSYS0000030238&ptvk=NBNSYS0100022836&ptvk=NBNSYS0100026711&ptvk=NBNSYS0100022843&ptvk=NBNSYS0000007095&ptvk=NBNSYS0100022840&ptvk=NBNSYS0000159014&ptvk=NBNSYS0000007098&ptvk=NBNSYS0100005981&ptvk=NBNSYS0000007096&ptvk=NBNSYS0000007097&ptvk=NBNSYS0000159015&ptvk=NBNSYS0100022837&ptvk=NBNSYS0100022322&datasetKey=SGB00001&startYear=1990&endYear=1990\n",
-      "1048\n"
+      "https://data.nbn.org.uk/api/search/taxa?q=/Bombus terrestris\n",
+      "['NHMSYS0000875475', 'NHMSYS0000875475', 'NHMSYS0000875477', 'NHMSYS0000875476', 'NHMSYS0000875477', 'NHMSYS0020772188', 'NHMSYS0000875476', 'NHMSYS0020546179', 'NHMSYS0000875471', 'NHMSYS0000875470', 'NHMSYS0000875474', 'NHMSYS0000875473', 'NHMSYS0001499618', 'NHMSYS0000875474', 'NHMSYS0020758435', 'NHMSYS0000875472', 'BMSSYS0000002872', 'NBNSYS0000008845', 'BMSSYS0000001794', 'NBNSYS0000008683', 'BMSSYS0000003768', 'NBNSYS0200003319', 'NHMSYS0020546253', 'NHMSYS0000604048', 'NHMSYS0001482759']\n",
+      "https://data.nbn.org.uk/api/taxonObservations?ptvk=NHMSYS0000875475&datasetKey=SGB00001&startYear=1990&endYear=2010\n",
+      "0\n"
      ]
     }
    ],
    "source": [
     "#'Volucella bombylans\n",
-    "sp = c.get_tvk(query='Volucella bombylans') #get species with 'Bombus' in...\n",
+    "sp = c.get_tvk(query='Bombus terrestris') #Volucella bombylans') #Volucella bombylans') #get species with 'Bombus' in...\n",
     "keys = []\n",
     "for res in sp['results']:\n",
-    "    k = res['taxonVersionKey']\n",
+    "    k = res['ptaxonVersionKey']\n",
     "    keys.append(str(k)) #get their keys....\n",
     "print keys\n",
-    "obs = c.get_observations(tvks=keys, start_year=1990, end_year=1990) #get observations\n",
+    "obs = c.get_observations(tvks=[keys[0]], start_year=1990, end_year=2010) #get observations\n",
     "print len(obs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://data.nbn.org.uk/api/taxonObservations?ptvk=NHMSYS0000875475&datasetKey=SGB00001&startYear=1990&endYear=2010\n"
+     ]
+    }
+   ],
+   "source": [
+    "obs = c.get_observations(tvks=['NHMSYS0000875475'], start_year=1990, end_year=2010) #get observations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -156,22 +189,11 @@
        "0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "len(obs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
    "source": [
     "len(obs)"
    ]
